# palette-mcp-server

./: .Dockerignore  .copywrite.hcl  .dockerignore  .gitignore  .gitleaksignore  .goreleaser.yaml  .openapi-generator-ignore  .prettierignore  AGENTS.md  CODEOWNERS  Dockerfile  README.md  SECURITY.md  Taskfile.yaml  pyproject.toml  raw-palette-apis.json
.github/: dependabot.yml  pull_request_template.md
.github/actions/vault-credentials/: action.yaml
.github/workflows/: gitleaks.yaml  pull-request.yaml  release.yaml
scripts/: start-mcp-inspector.sh
skills/: example.agents.md
src/: __init__.py  context.py  helpers.py  openapi.py  server.py  tools.py  tracing.py
src/tools/: __init__.py  clusterprofiles.py  clusters.py  common.py  kubeconfig.py  packs.py  tags.py
terraform/: .terraform.lock.hcl  cluster.tf  cluster_profile.tf  data.tf  inputs.tf  provider.tf
tests/: conftest.py  e2e.py  e2e_coverage.md  e2e_helpers.py  test_context.py  test_helpers.py  test_helpers_api.py  test_helpers_common.py  test_mcp_smoke.py  test_server.py  test_server_wiring.py  test_tools_clusterprofiles.py  test_tools_clusters.py  test_tools_common.py  test_tools_packs.py  test_tools_tags.py  test_tracing.py
