[project]
name = "palette-mcp-server"
version = "0.2.4"
description = "Palette MCP Server"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "arize-phoenix==14.1.1",
    "mcp>=1.10.0",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "fastmcp>=3.0.0,<4",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest",
]
