[project]
name = "palette-mcp-server"
version = "0.2.5"
description = "Palette MCP Server"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "arize-phoenix==14.1.1",
    "mcp>=1.27.0",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "fastmcp>=3.0.0,<4",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
e2e = [
    "smolagents[mcp]>=1.24.0",
    "openai>=1.0.0",
]
